--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
   </head>
   <body>
-    <section class="page-header">
+    /• <section class="page-header">
       <h1 class="project-name">Jekyll-bootstrap</h1>
       <h2 class="project-tagline">The quickest way to start and publish your Jekyll powered blog. 100% compatible with GitHub pages.</h2>
       <a href="https://github.com/blackgirl/jekyll-bootstrap" class="btn">View on GitHub</a>
       <a href="https://github.com/blackgirl/jekyll-bootstrap/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/blackgirl/jekyll-bootstrap/tarball/master" class="btn">Download .tar.gz</a>
-    </section>
+    </section> •/
 
     <section class="main-content">
       <h3>
